Update deps, build with Go 1.19, bump to v2.0.4

--- a/com.exension.hwinfo.sdPlugin/manifest.json
+++ b/com.exension.hwinfo.sdPlugin/manifest.json
@@ -21,14 +21,14 @@
       "UUID": "com.exension.hwinfo.reading"
     }
   ],
-  "Author": "exension",
+  "Author": "shayne",
   "CodePathWin": "hwinfo.exe",
   "PropertyInspectorPath": "index_pi.html",
-  "Description": "Display sensor readings from HWiNFO64. This plugin is not afilliated with HWiNFO64, for more information and to download HWiNFO64 visit https://www.hwinfo.com",
+  "Description": "Display sensor readings from HWiNFO64. This plugin is not affiliated with HWiNFO64, for more information and to download HWiNFO64 visit https://www.hwinfo.com",
   "Name": "HWiNFO",
   "Icon": "pluginIcon",
-  "URL": "https://github.com/exension/hwinfo-streamdeck",
-  "Version": "2.0.3",
+  "URL": "https://github.com/shayne/hwinfo-streamdeck",
+  "Version": "2.0.4",
   "ApplicationsToMonitor": {
     "windows": ["HWiNFO64.EXE", "HWiNFO64.exe"]
   },
